// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Modal Matches snapshot when boolean prop "dismissible" is set to: "false" 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.section)
    background="jest-auto-snapshots String Fixture"
    noBackground={true}
    tabIndex="0"
    width="jest-auto-snapshots String Fixture"
  >
    <ForwardRef(styled.button)
      noBackground={true}
      onClick={[Function]}
    >
      <CrossIcon
        size="large"
      />
    </ForwardRef(styled.button)>
    <NodeFixture />
    <ForwardRef(styled.div)
      background="jest-auto-snapshots String Fixture"
    >
      <NodeFixture />
      <Button
        disabled={true}
        fullWidth={false}
        hasIconOnly={false}
        hideSearch={true}
        iconEnd={false}
        label="jest-auto-snapshots String Fixture"
        loading={false}
        onClick={[Function]}
        onOpen={null}
        selectPosition="bottom"
        size="medium"
        type="text"
      />
      <Button
        disabled={true}
        fullWidth={false}
        hasIconOnly={false}
        hideSearch={true}
        iconEnd={false}
        label="jest-auto-snapshots String Fixture"
        loading={false}
        onClick={[Function]}
        onOpen={null}
        selectPosition="bottom"
        size="medium"
        type="jest-auto-snapshots String Fixture"
      />
    </ForwardRef(styled.div)>
  </ForwardRef(styled.section)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Modal Matches snapshot when boolean prop "noBackground" is set to: "false" 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.section)
    background="jest-auto-snapshots String Fixture"
    noBackground={false}
    tabIndex="0"
    width="jest-auto-snapshots String Fixture"
  >
    <ForwardRef(styled.button)
      noBackground={false}
      onClick={[Function]}
    >
      <CrossIcon
        size="large"
      />
    </ForwardRef(styled.button)>
    <NodeFixture />
    <ForwardRef(styled.div)
      background="jest-auto-snapshots String Fixture"
    >
      <NodeFixture />
      <Button
        disabled={true}
        fullWidth={false}
        hasIconOnly={false}
        hideSearch={true}
        iconEnd={false}
        label="jest-auto-snapshots String Fixture"
        loading={false}
        onClick={[Function]}
        onOpen={null}
        selectPosition="bottom"
        size="medium"
        type="text"
      />
      <Button
        disabled={true}
        fullWidth={false}
        hasIconOnly={false}
        hideSearch={true}
        iconEnd={false}
        label="jest-auto-snapshots String Fixture"
        loading={false}
        onClick={[Function]}
        onOpen={null}
        selectPosition="bottom"
        size="medium"
        type="jest-auto-snapshots String Fixture"
      />
    </ForwardRef(styled.div)>
  </ForwardRef(styled.section)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Modal Matches snapshot when passed all props 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.section)
    background="jest-auto-snapshots String Fixture"
    noBackground={true}
    tabIndex="0"
    width="jest-auto-snapshots String Fixture"
  >
    <ForwardRef(styled.button)
      noBackground={true}
      onClick={[Function]}
    >
      <CrossIcon
        size="large"
      />
    </ForwardRef(styled.button)>
    <NodeFixture />
    <ForwardRef(styled.div)
      background="jest-auto-snapshots String Fixture"
    >
      <NodeFixture />
      <Button
        disabled={true}
        fullWidth={false}
        hasIconOnly={false}
        hideSearch={true}
        iconEnd={false}
        label="jest-auto-snapshots String Fixture"
        loading={false}
        onClick={[Function]}
        onOpen={null}
        selectPosition="bottom"
        size="medium"
        type="text"
      />
      <Button
        disabled={true}
        fullWidth={false}
        hasIconOnly={false}
        hideSearch={true}
        iconEnd={false}
        label="jest-auto-snapshots String Fixture"
        loading={false}
        onClick={[Function]}
        onOpen={null}
        selectPosition="bottom"
        size="medium"
        type="jest-auto-snapshots String Fixture"
      />
    </ForwardRef(styled.div)>
  </ForwardRef(styled.section)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Modal Matches snapshot when passed only required props 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.section)
    background={null}
    noBackground={false}
    tabIndex="0"
    width={null}
  >
    <NodeFixture />
    <ForwardRef(styled.div)
      background={null}
    />
  </ForwardRef(styled.section)>
</ForwardRef(styled.div)>
`;
